--- a/AjaxcalltoReddit/AjaxexampleforReddit/index.html
+++ b/AjaxcalltoReddit/AjaxexampleforReddit/index.html
@@ -1,3 +1,17 @@
+<!DOCTYPE html>
+ <html>
+<head>
+</head>
+
+
+<body>
 <button type="button" class="btn">Click me!</button>
 <div class="text">Replace me!!</div>
 <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
+<script src="script.js"></script>
+
+</body>
+</html>
+
+
+
